; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_set_cute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_set_cute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_cute = type { i64, i32, i32 }
%struct.TYPE_3__ = type { i32 }

@LEV_TARG_CUTE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_cute(%struct.lev_cute* %0) #0 {
  %2 = alloca %struct.lev_cute*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.lev_cute* %0, %struct.lev_cute** %2, align 8
  %4 = load %struct.lev_cute*, %struct.lev_cute** %2, align 8
  %5 = getelementptr inbounds %struct.lev_cute, %struct.lev_cute* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @LEV_TARG_CUTE, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.lev_cute*, %struct.lev_cute** %2, align 8
  %12 = getelementptr inbounds %struct.lev_cute, %struct.lev_cute* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.TYPE_3__* @get_user(i32 %13)
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %3, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = icmp ne %struct.TYPE_3__* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %1
  %18 = load %struct.lev_cute*, %struct.lev_cute** %2, align 8
  %19 = getelementptr inbounds %struct.lev_cute, %struct.lev_cute* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.TYPE_3__* @get_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
